--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <title>Roddy The Rat</title>
     <meta charset="utf-8">
 
   </head>
